--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
                 </button>
             </div>
         </div>
-        <div id="weather-data">
-            <h2><i class="fa-solid fa-location-dot"></i> <span id="city">Maceió</span></h2>
+        <div id="weather-data" class="hide">
+            <h2><i class="fa-solid fa-location-dot"></i> <span id="city"></span></h2>
             <p id="temperature">
-                <span>38</span>&deg;C
+                <span></span>&deg;C
             </p>
             <div id="description-container">
-                <p id="description">Nublado</p>
+                <p id="description"></p>
                 <img src="" alt="Weather Conditions" id="weather-icon">
             </div>
             <div id="details-container">
-                <p id="umidity">
+                <p id="humidity">
                     <i class="fa-solid fa-droplet"></i>
-                    <span>48%</span>
+                    <span></span>
                 </p>
                 <p id="wind">
                     <i class="fa-solid fa-wind"></i>
-                    <span>3km/h</span>
+                    <span></span>
                 </p>
             </div>
         </div>
